# pip-test

./: pyproject.toml
my_project/: project.py
