[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
description = "My package description"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["one", "two"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ansible-risk-insight",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "my_project.__init__.__version__"}

[project.scripts]
myproject = "my_project:project"

[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, W503,"
max-line-length = 150
